--- a/Detail.html
+++ b/Detail.html
@@ -24,7 +24,7 @@
             <div>
               <ul class="flex space-x-8 font-semibold">
                 <li>
-                  <a href="Home.html" class="mx-4 text-gray-600 hover:text-red-500 font-bold">Home</a>
+                  <a href="index.html" class="mx-4 text-gray-600 hover:text-red-500 font-bold">Home</a>
                 </li>
                 <li>
                   <a href="Products.html" class="mx-4 text-gray-600 hover:text-red-500 font-bold"
@@ -173,7 +173,7 @@
                     /></span>
                     <ul class="md:flex md:space-x-8 space-y-5 md:space-y-0 items-center font-semibold">
                       <li>
-                        <a href="Home.html" class="mx-4 text-gray-600 hover:text-red-500 font-bold">Home</a>
+                        <a href="index.html" class="mx-4 text-gray-600 hover:text-red-500 font-bold">Home</a>
                       </li>
                       <li>
                         <a href="Products.html" class="mx-4 text-gray-600 hover:text-red-500 font-bold"
