--- a/Products.html
+++ b/Products.html
@@ -22,7 +22,7 @@
       </div>
       <ul class="flex hidden sm:hidden md:flex text-xs xl:text-xl">
         <li>
-          <a href="" class="mx-4 text-gray-600 hover:text-red-500 font-bold"
+          <a href="index.html" class="mx-4 text-gray-600 hover:text-red-500 font-bold"
             >Home</a
           >
         </li>
@@ -170,7 +170,7 @@
         <ul class="flex">
           <li>
             <a
-              href="Home.html"
+              href="index.html"
               class="mx-4 text-gray-600 hover:text-red-500 font-bold"
               2
               >Home</a
