--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="flex">
               <li>
                 <a
-                  href="Home.html"
+                  href="index.html"
                   class="mx-4 text-gray-600 hover:text-red-500 font-bold"
                   2
                   >Home</a
@@ -360,7 +360,7 @@
           <ul class="flex">
             <li>
               <a
-                href="Home.html"
+                href="index.html"
                 class="mx-4 text-gray-600 hover:text-red-500 font-bold"
                 2
                 >Home</a
